Fixing small padding issue on iPhone for landing page

--- a/source/stylesheets/_homepage.scss
+++ b/source/stylesheets/_homepage.scss
@@ -17,7 +17,7 @@ header {
 
   @include media ($small-screen) {
     @include size (375 auto);
-    padding: 200px 30px 0 30px;
+    padding: 100px 30px 0 30px;
   }
 }
 
